<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_email_title"
        android:layout_margin="16dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password_title"
        android:layout_margin="16dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="password" />
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_margin="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or_title"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/bt_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_google_button"
        android:backgroundTint="@color/teal_200"
        android:layout_margin="16dp"
        />
    <Button
        android:id="@+id/bt_login_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_apple_button"
        android:backgroundTint="@color/teal_700"
        android:layout_margin="16dp"
        />

</LinearLayout>