<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="29dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="36sp"
        />

    <TextView
        android:id="@+id/tv_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_search_title"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_title">

        <EditText
            android:id="@+id/et_search_bar"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:hint="@string/dashboard_search_hint"
            android:autofillHints="name"
            android:inputType="text" />
        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_search_button"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dashboard_categories_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categories"
        tools:listitem="@layout/item_categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="375dp"
        android:layout_height="435dp"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_categories"
        tools:listitem="@layout/item_movies" />


</androidx.constraintlayout.widget.ConstraintLayout>