<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_movies"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">
    <ImageView
        android:id="@+id/iv_movie_thumbnail"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/thumb_one"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/tv_movie_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_movie_title"
        android:textStyle="bold"
        android:paddingStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/iv_movie_thumbnail"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingStart="8dp"
        android:layout_below="@+id/tv_movie_title_text"
        android:layout_toEndOf="@+id/iv_movie_thumbnail"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tv_movie_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_release_date"
        android:textStyle="bold"
        android:paddingStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tv_movie_title"
        android:layout_toEndOf="@+id/iv_movie_thumbnail"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tv_movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingStart="8dp"
        android:layout_below="@+id/tv_movie_date_text"
        android:layout_toEndOf="@+id/iv_movie_thumbnail"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tv_movie_rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_rating"
        android:textStyle="bold"
        android:paddingStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tv_movie_date"
        android:layout_toEndOf="@+id/iv_movie_thumbnail"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tv_movie_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingStart="8dp"
        android:layout_below="@+id/tv_movie_rate_text"
        android:layout_toEndOf="@+id/iv_movie_thumbnail"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>