<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_info"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/tv_title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/teal_200"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_info_image"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/info_summary_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="16dp"
            />
        <TextView
            android:id="@+id/tv_release_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/info_release_date"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />
        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingHorizontal="16dp"
            />
        <TextView
            android:id="@+id/tv_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_release"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/info_rating"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />
        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingHorizontal="16dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_info_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/app_name"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>